fix apply now section that was not responsive; remove unneccesary classes and fixed width

--- a/css/style.css
+++ b/css/style.css
@@ -796,7 +796,6 @@ input[type="color"],
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;*/
-	width: 1000px;
 	padding: 0px 20px 20px 20px;
 	margin: 10px auto;
 	
